latest version developed in class

--- a/4-SVM/4-SVM.ipynb
+++ b/4-SVM/4-SVM.ipynb
@@ -444,8 +444,18 @@
    "source": [
     "__Question :__ De quel score s'agit-il ? Utilisez \n",
     "```\n",
-    "help(clf.score)\n",
+    "help(model_svc.score)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbf0563b-4b8d-4315-b865-6f27a21ef596",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(model_svc.score)"
    ]
   },
   {
@@ -707,11 +717,11 @@
     "\n",
     "## Modèle précédent\n",
     "# Marquer les vecteurs de support d'une croix\n",
-    "ax.scatter(model_svc.support_vectors_[:, 0], \n",
-    "           model_svc.support_vectors_[:, 1], \n",
-    "           linewidth=1, \n",
-    "           marker='x', s=200,\n",
-    "           color='k')\n",
+    "#ax.scatter(model_svc.support_vectors_[:, 0], \n",
+    "#           model_svc.support_vectors_[:, 1], \n",
+    "#           linewidth=1, \n",
+    "#           marker='x', s=200,\n",
+    "#           color='k')\n",
     "\n",
     "# Grille de points sur lesquels appliquer le modèle\n",
     "xx = np.linspace(xlim[0], xlim[1], 30)\n",
@@ -722,8 +732,8 @@
     "Z = model_svc.decision_function(xy).reshape(XX.shape)\n",
     "\n",
     "# Afficher la frontière de décision et la marge\n",
-    "ax.contour(XX, YY, Z, colors='k', levels=[-1, 0, 1], \n",
-    "           alpha=0.5, linestyles=['--', '-', '--'])\n",
+    "#ax.contour(XX, YY, Z, colors='k', levels=[-1, 0, 1], \n",
+    "#           alpha=0.5, linestyles=['--', '-', '--'])\n",
     "\n",
     "## Nouveau modèle\n",
     "# Marquer les vecteurs de support d'une croix\n",
@@ -1210,6 +1220,20 @@
     "# Afficher la frontière de décision et la marge\n",
     "ax.contour(XX, YY, Z, colors='k', levels=[-1, 0, 1], \n",
     "           alpha=0.5, linestyles=['--', '-', '--'])\n",
+    "\n",
+    "# Frontière précédente\n",
+    "# Grille de points sur lesquels appliquer le modèle\n",
+    "xx = np.linspace(xlim[0], xlim[1], 30)\n",
+    "yy = np.linspace(ylim[0], ylim[1], 30)\n",
+    "YY, XX = np.meshgrid(yy, xx)\n",
+    "xy = np.vstack([XX.ravel(), YY.ravel()]).T\n",
+    "# Prédire pour les points de la grille\n",
+    "Z = model_svc.decision_function(xy).reshape(XX.shape)\n",
+    "\n",
+    "# Afficher la frontière de décision et la marge\n",
+    "ax.contour(XX, YY, Z, colors='g', levels=[-1, 0, 1], \n",
+    "           alpha=0.5, linestyles=['--', '-', '--'])\n",
+    "\n",
     "\n",
     "# Légende\n",
     "plt.legend()\n",
@@ -2138,7 +2162,316 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5243079f-43ea-49ba-ba99-4bd390609785",
+   "id": "0b9eed05-068a-4c4f-916f-b3bef716704b",
+   "metadata": {},
+   "source": [
+    "## 7. SVM à noyau non-linéaire sur un problème plus simple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cb5b9fc-1051-4082-9c9d-c782527498b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = penguins_labels[penguins_labels[\"species_int\"].isin([0,1])]\n",
+    "labels = np.array(labels[\"species_int\"])\n",
+    "print(\"shape de y:\", labels.shape)\n",
+    "\n",
+    "data = penguins_features[penguins_labels[\"species_int\"].isin([0,1])] \n",
+    "data = np.array(data[[\"body_mass_g\", \"bill_length_mm\"]])\n",
+    "print(\"shape de X:\", data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f85c998-86de-4efa-8774-f0c9de67b529",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = model_selection.train_test_split(data, \n",
+    "                                                                    labels, \n",
+    "                                                                    test_size=.2, \n",
+    "                                                                    random_state=21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11035420-cf37-410f-8b57-b09ac268a8f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std_scaler = preprocessing.StandardScaler().fit(X_train)\n",
+    "X_train_scaled = std_scaler.transform(X_train)\n",
+    "X_test_scaled = std_scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a8bdbf0-5730-48e3-80e6-4a1f9f2f3434",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 6))\n",
+    "\n",
+    "# afficher les données (pingouins Adelie)\n",
+    "adelie_indices = np.where(y_train==0)[0]\n",
+    "adelie = plt.scatter(X_train_scaled[adelie_indices][:, 0], \n",
+    "                    X_train_scaled[adelie_indices][:, 1], \n",
+    "                    label = 'Adelie',\n",
+    "                    cmap=plt.cm.Paired)\n",
+    "\n",
+    "# afficher les données (pingouins Chinstrap)\n",
+    "gentoo_indices = np.where(y_train==1)[0]\n",
+    "gentoo = plt.scatter(X_train_scaled[gentoo_indices][:, 0], \n",
+    "                    X_train_scaled[gentoo_indices][:, 1], \n",
+    "                    label = 'Chinstrap',\n",
+    "                    cmap=plt.cm.Paired)\n",
+    "\n",
+    "# Légende\n",
+    "plt.legend()\n",
+    "plt.xlabel(\"Body mass (centrée-réduite)\")\n",
+    "plt.ylabel(\"Bill length (centrée-réduite)\")\n",
+    "plt.title(\"Données centrées-réduites\")\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "525be798-2a44-4759-a12f-f6bcebc7cb29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gamma_values = np.logspace(-1, 3, 10)\n",
+    "C_values = np.array([1., 10., 100., 500, 1000])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a2133c9-feca-4b57-8a0d-f2b33176a6ef",
+   "metadata": {},
+   "source": [
+    "Nous pouvons maintenant utiliser [GridSearchCV](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html)  :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77a375f3-5d8e-44b6-952e-e1610c026382",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instanciation d'un objet GridSearchCV\n",
+    "grid_svc = model_selection.GridSearchCV(svm.SVC(kernel='rbf'), # prédicteur à évaluer\n",
+    "                                       {'gamma': gamma_values, 'C': C_values}, # dictionnaire de valeurs d'hyperparamètres\n",
+    "                                       cv=5, # utiliser 5 folds de validation croisée\n",
+    "                                       scoring='accuracy' # métrique d'évaluation de la performance\n",
+    "                                       )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca832642-0401-4cf3-9ea8-08c372e4f7fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# Utilisation de cet objet sur les données d'entraînement\n",
+    "grid_svc.fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad9ef91d-2d4c-46e5-b27d-2f79e12ea695",
+   "metadata": {},
+   "source": [
+    "La valeur optimale des hyperparamètres est donnée par :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a4cc5bb-1337-4dd8-a92e-2014d80bb546",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(grid_svc.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d078cb62-f360-43c6-8ed2-f0775e811028",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GramMatrix = metrics.pairwise.rbf_kernel(data_scaled, gamma=grid_svc.best_params_['gamma'])\n",
+    "GramMatrix_scaled = center_and_normalise_kernel(GramMatrix)\n",
+    "\n",
+    "# heatmap + color map\n",
+    "fig, ax = plt.subplots(figsize=(5, 5))\n",
+    "plot = ax.imshow(GramMatrix_scaled) \n",
+    "\n",
+    "# set axes boundaries\n",
+    "ax.set_xlim([0, data.shape[0]]) ; ax.set_ylim([0, data_scaled.shape[0]])\n",
+    "\n",
+    "# flip the y-axis\n",
+    "ax.invert_yaxis() ; ax.xaxis.tick_top()\n",
+    "\n",
+    "# plot colorbar to the right\n",
+    "plt.colorbar(plot, pad=0.1, fraction=0.04)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f09b47e-ca7a-424f-ac24-80dbbe543c6b",
+   "metadata": {},
+   "source": [
+    "Visualisons l'accuracy en fonction de `C` et `gamma` :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92b63700-8dfd-4007-b391-a3669886f6a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 8))\n",
+    "\n",
+    "# réarrangement des résultats\n",
+    "scores = grid_svc.cv_results_['mean_test_score'].reshape(len(gamma_values), len(C_values))\n",
+    "\n",
+    "# heatmap\n",
+    "plt.imshow(scores, interpolation='none', cmap=\"RdBu_r\")\n",
+    "\n",
+    "# colorbar\n",
+    "plt.colorbar()\n",
+    "\n",
+    "# Légende\n",
+    "plt.title(\"Accuracy d'une SVM en validation croisée\")\n",
+    "plt.xlabel(\"C\")\n",
+    "plt.ylabel(\"Gamma\")\n",
+    "plt.ylim((-0.5, 3.5))\n",
+    "plt.xticks(np.arange(len(C_values)), C_values)\n",
+    "plt.yticks(np.arange(len(gamma_values)), [\"%.2f\" % x for x in gamma_values], rotation=90)\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "762ed463-ce22-4b02-ac93-ded3696c22e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svc_best = grid_svc.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3942b4a9-a508-4ca0-9902-5fa9161f207a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 6))\n",
+    "\n",
+    "# afficher les données (pingouins Adelie)\n",
+    "adelie_indices = np.where(y_train==0)[0]\n",
+    "adelie = plt.scatter(X_train_scaled[adelie_indices][:, 0], \n",
+    "                    X_train_scaled[adelie_indices][:, 1], \n",
+    "                    label = 'Adelie',\n",
+    "                    cmap=plt.cm.Paired)\n",
+    "\n",
+    "# afficher les données (pingouins Chinstrap)\n",
+    "gentoo_indices = np.where(y_train==1)[0]\n",
+    "gentoo = plt.scatter(X_train_scaled[gentoo_indices][:, 0], \n",
+    "                    X_train_scaled[gentoo_indices][:, 1], \n",
+    "                    label = 'Chinstrap',\n",
+    "                    cmap=plt.cm.Paired)\n",
+    "\n",
+    "\n",
+    "# Limites du cadre\n",
+    "ax = plt.gca()\n",
+    "xlim = ax.get_xlim()\n",
+    "ylim = ax.get_ylim()\n",
+    "\n",
+    "# Marquer les vecteurs de support d'une croix\n",
+    "ax.scatter(svc_best.support_vectors_[:, 0], \n",
+    "           svc_best.support_vectors_[:, 1], \n",
+    "           linewidth=1, \n",
+    "           marker='x', \n",
+    "           color='k')\n",
+    "\n",
+    "# Grille de points sur lesquels appliquer le modèle\n",
+    "xx = np.linspace(xlim[0], xlim[1], 30)\n",
+    "yy = np.linspace(ylim[0], ylim[1], 30)\n",
+    "YY, XX = np.meshgrid(yy, xx)\n",
+    "xy = np.vstack([XX.ravel(), YY.ravel()]).T\n",
+    "# Prédire pour les points de la grille\n",
+    "Z = svc_best.decision_function(xy).reshape(XX.shape)\n",
+    "\n",
+    "# Afficher la frontière de décision et la marge\n",
+    "ax.contour(XX, YY, Z, colors='k', levels=[-1, 0, 1], \n",
+    "           alpha=0.5, linestyles=['--', '-', '--'])\n",
+    "\n",
+    "# Légende\n",
+    "plt.legend()\n",
+    "plt.xlabel(\"Body mass (centrée-réduite)\")\n",
+    "plt.ylabel(\"Bill length (centrée-réduite)\")\n",
+    "plt.title(\"Frontière de décision de la SVM à noyau gaussien (C=10, Gamma=100)\")\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cc45916-3528-4361-b01b-7d62444af114",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Score sur le jeu de test de la SVM à noyau gaussien (C et gamma optimisés): %.2f\" % svc_best.score(X_test_scaled, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb057d73-c010-4e5f-aae3-5ea7e943779d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.ConfusionMatrixDisplay.from_predictions(y_test, svc_best.predict(X_test_scaled))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "068b1de8-a6f8-4de6-848f-380dca59c373",
+   "metadata": {},
+   "source": [
+    "Alternativement :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c43d9ba-db8f-47ea-976b-eea6661ab53a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.confusion_matrix(y_test, svc_best.predict(X_test_scaled))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62988517-8474-4c24-ade3-0e5af89e1553",
    "metadata": {
     "tags": []
    },
@@ -2148,7 +2481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7ab1e97-bc11-4dc5-b650-40e7672ac4d8",
+   "id": "9cc5d77a-6cb2-4730-83d5-e6dc8649b5f4",
    "metadata": {},
    "source": [
     "On peut utiliser le package `seaborn` pour examiner aisément les paires de variables deux à deux et en déduire lesquelles sont les plus utiles pour séparer les classes :"
@@ -2176,6 +2509,14 @@
     "import seaborn as sns\n",
     "sns.pairplot(penguins_adelie_chinstrap, hue=\"species_int\",palette=\"bright\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4122a2f-1a32-4bcb-abeb-e131d805e6b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
