final version in class

--- a/5-Reduction/5-Reduction.ipynb
+++ b/5-Reduction/5-Reduction.ipynb
@@ -426,6 +426,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30fb379a-46cd-4a62-951c-b35e0de1aefa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"%.2f\" % np.sum(pca.explained_variance_ratio_[:2]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "881d20c0-2f86-4703-bda7-29f498c753c4",
    "metadata": {},
@@ -599,6 +609,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2590709e-395e-4304-98e3-cc3347dbf8c2",
+   "metadata": {},
+   "source": [
+    "__Si vous n'arrivez pas à télécharger les données :__\n",
+    "* Aller sur : https://github.com/CroncLee/PCA-face-recognition/blob/master/olivetti_py3.pkz\n",
+    "* Télécharger le fichier (bouton Download) \n",
+    "utiliser la commande\n",
+    "```\n",
+    "    data = datasets.fetch_olivetti_faces(data_home=\"<PATH TO DATA>\")\n",
+    "```\n",
+    "En remplaçant <PATH TO DATA> par le chemin vers le dossier où vous avez enregistré les données."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "df7caea8-bf3e-4bc9-b310-1e24c431ef88",
@@ -646,7 +671,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(X[23, :].reshape((64, 64)), interpolation='nearest', cmap=plt.cm.gray)"
+    "plt.imshow(X[13, :].reshape((64, 64)), interpolation='nearest', cmap=plt.cm.gray)"
    ]
   },
   {
