Improve with students remarks

--- a/1-Intro/1-Intro.ipynb
+++ b/1-Intro/1-Intro.ipynb
@@ -762,6 +762,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On peut noter que, même si la RMSE est la même, le fait de centrer-réduire les variables a changé la valeur des paramètres appris par le modèle. On peut comparer par exemple les valeurs prises par l'intercept (terme indépendant dans le modèle linéaire)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "df5b5cd9-c3c4-4688-9b96-1b4f2d5a7f76",
@@ -860,6 +867,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comme précédemment, on normalise chacune des variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standard_scaler_dummies = preprocessing.StandardScaler()\n",
+    "standard_scaler_dummies.fit(X_dummies)\n",
+    "X_scaled_dummies = standard_scaler_dummies.transform(X_dummies)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "09103380-0b5c-4dc8-8ca3-18982e2fa998",
    "metadata": {},
    "source": [
@@ -887,7 +912,7 @@
     "predictor_dummy = linear_model.LinearRegression()\n",
     "\n",
     "# Entraîner predictor_dummy sur les nouvelles données\n",
-    "predictor_dummy.fit(X_dummies, y)"
+    "predictor_dummy.fit(X_scaled_dummies, y)"
    ]
   },
   {
@@ -905,7 +930,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred_dummy = predictor_dummy.predict(X_dummies)"
+    "y_pred_dummy = predictor_dummy.predict(X_scaled_dummies)"
    ]
   },
   {
@@ -1010,7 +1035,7 @@
     "num_features = X.shape[1]\n",
     "plt.scatter(range(num_features), np.abs(predictor_scaled.coef_), label='Centrées-réduites')\n",
     "\n",
-    "num_features2 = X_dummies.shape[1]\n",
+    "num_features2 = X_scaled_dummies.shape[1]\n",
     "plt.scatter(range(num_features2), np.abs(predictor_dummy.coef_), label='Avec one-hot', marker='v')\n",
     "feature_names2 = df_dummies.drop(columns=['mpg', 'car name']).columns\n",
     "\n",
@@ -1020,14 +1045,6 @@
     "\n",
     "plt.legend(loc=(0.02, 0.75))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c671092-82fd-4126-8408-61bcb86829bf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
