--- a/4-SVM/4-SVM.ipynb
+++ b/4-SVM/4-SVM.ipynb
@@ -759,7 +759,7 @@
     "plt.legend()\n",
     "plt.xlabel(\"Bill depth (mm)\")\n",
     "plt.ylabel(\"Bill length (mm)\")\n",
-    "plt.title(\"SVM linéaire (C=10)\")\n",
+    "plt.title(\"SVM linéaire (C=0.1)\")\n",
     "plt.tight_layout()"
    ]
   },
@@ -2084,7 +2084,7 @@
     "plt.figure(figsize=(8, 8))\n",
     "\n",
     "# réarrangement des résultats\n",
-    "scores = grid_svc.cv_results_['mean_test_score'].reshape(len(gamma_values), len(C_values))\n",
+    "scores = grid_svc.cv_results_['mean_test_score'].reshape(len(C_values), len(gamma_values))\n",
     "\n",
     "# heatmap\n",
     "plt.imshow(scores, interpolation='none', cmap=\"RdBu_r\")\n",
@@ -2094,11 +2094,11 @@
     "\n",
     "# Légende\n",
     "plt.title(\"Accuracy d'une SVM en validation croisée\")\n",
-    "plt.xlabel(\"C\")\n",
-    "plt.ylabel(\"Gamma\")\n",
-    "plt.ylim((-0.5, 3.5))\n",
-    "plt.xticks(np.arange(len(C_values)), C_values)\n",
-    "plt.yticks(np.arange(len(gamma_values)), [\"%.2f\" % x for x in gamma_values], rotation=90)\n",
+    "plt.ylabel(\"C\")\n",
+    "plt.xlabel(\"Gamma\")\n",
+    "plt.xlim((-0.5, 3.5))\n",
+    "plt.yticks(np.arange(len(C_values)), C_values)\n",
+    "plt.xticks(np.arange(len(gamma_values)), [\"%.2f\" % x for x in gamma_values], rotation=90)\n",
     "plt.tight_layout()"
    ]
   },
@@ -2347,7 +2347,7 @@
     "plt.figure(figsize=(8, 8))\n",
     "\n",
     "# réarrangement des résultats\n",
-    "scores = grid_svc.cv_results_['mean_test_score'].reshape(len(gamma_values), len(C_values))\n",
+    "scores = grid_svc.cv_results_['mean_test_score'].reshape(len(C_values), len(gamma_values))\n",
     "\n",
     "# heatmap\n",
     "plt.imshow(scores, interpolation='none', cmap=\"RdBu_r\")\n",
@@ -2357,11 +2357,11 @@
     "\n",
     "# Légende\n",
     "plt.title(\"Accuracy d'une SVM en validation croisée\")\n",
-    "plt.xlabel(\"C\")\n",
-    "plt.ylabel(\"Gamma\")\n",
-    "plt.ylim((-0.5, 3.5))\n",
-    "plt.xticks(np.arange(len(C_values)), C_values)\n",
-    "plt.yticks(np.arange(len(gamma_values)), [\"%.2f\" % x for x in gamma_values], rotation=90)\n",
+    "plt.ylabel(\"C\")\n",
+    "plt.xlabel(\"Gamma\")\n",
+    "plt.xlim((-0.5, 3.5))\n",
+    "plt.yticks(np.arange(len(C_values)), C_values)\n",
+    "plt.xticks(np.arange(len(gamma_values)), [\"%.2f\" % x for x in gamma_values], rotation=90)\n",
     "plt.tight_layout()"
    ]
   },
@@ -2427,7 +2427,7 @@
     "plt.legend()\n",
     "plt.xlabel(\"Body mass (centrée-réduite)\")\n",
     "plt.ylabel(\"Bill length (centrée-réduite)\")\n",
-    "plt.title(\"Frontière de décision de la SVM à noyau gaussien (C=10, Gamma=100)\")\n",
+    "plt.title(f\"Frontière de décision de la SVM à noyau gaussien (C={svc_best.C}, Gamma={svc_best.gamma: .2f})\")\n",
     "plt.tight_layout()"
    ]
   },
@@ -2509,14 +2509,6 @@
     "import seaborn as sns\n",
     "sns.pairplot(penguins_adelie_chinstrap, hue=\"species_int\",palette=\"bright\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4122a2f-1a32-4bcb-abeb-e131d805e6b0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
