--- a/5-Reduction/5-Reduction.ipynb
+++ b/5-Reduction/5-Reduction.ipynb
@@ -109,16 +109,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a033f5bd-26fa-4b6c-bf42-7fb03f47dea3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_data.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a810fdde-1801-4a88-b297-6d7bd3d97c91",
    "metadata": {},
@@ -133,9 +123,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!wget https://raw.githubusercontent.com/chagaz/cp-ia-intro-ml-2022/main/5-Reduction/data/decathlon.txt\n",
+    "!wget https://raw.githubusercontent.com/chagaz/cp-ia-intro-ml-2022/main/5-Reduction/data/decathlon.txt\n",
     "\n",
-    "#df = pd.read_csv('decathlon.txt', sep=\"\\t\") "
+    "my_data = pd.read_csv('decathlon.txt', sep=\"\\t\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_data.head()"
    ]
   },
   {
@@ -891,22 +890,6 @@
     "plt.xlabel(\"Première composante tSNE\")\n",
     "plt.ylabel(\"Deuxième composante tSNE\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "caccd40a-c9d3-4639-9dc5-379c7ec5dafc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f0be719-540d-424a-bd6b-ff87218dc27b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
