--- a/3-Arbres/3-Arbres.ipynb
+++ b/3-Arbres/3-Arbres.ipynb
@@ -229,7 +229,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = np.array(df['class'])"
+    "y = 1-np.array(df['class'])\n",
+    "y"
    ]
   },
   {
@@ -247,7 +248,7 @@
    "id": "082dd58f-b8de-413b-8d00-eee85db996d1",
    "metadata": {},
    "source": [
-    "__Question :__ Combien d'échantillons (examples) notre jeu de données contient-il ? Combien de variables ?"
+    "__Question :__ Combien d'échantillons (examples) notre jeu de données contient-il ? Combien de variables ? Quelle est la signification de la classe \"1\" dans $ y $ ? "
    ]
   },
   {
@@ -1565,11 +1566,19 @@
     "print(\"Le taux de vrais positifs correspondant à un taux de faux positifs n'excédant pas %.f %% est de %.f %%\" % ((100*max_fpr), (100*max_tpr)))\n",
     "print(\"Il correspond à un seuil de %.2f sur les prédictions du modèle.\" % thresholds[max_index_where_fpr_acceptable])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb42eef7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "conplex-dti",
    "language": "python",
    "name": "python3"
   },
@@ -1583,7 +1592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
