Improve with students remarks

--- a/5-Reduction/5-Reduction.ipynb
+++ b/5-Reduction/5-Reduction.ipynb
@@ -763,6 +763,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e56d739",
+   "metadata": {},
+   "source": [
+    "__Question :__ \n",
+    "* Quelle est la proportion de variance expliquée par les deux premières composantes ? \n",
+    "* En observant les 2 premières composantes principales, que remarquez-vous sur les zones ou les structures mises en avant dans l'image ? Que peut-on en déduire sur les informations qu'elles capturent ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f8117bf1-f045-494f-b2a0-638953feaa2d",
    "metadata": {},
    "source": [
@@ -890,11 +900,99 @@
     "plt.xlabel(\"Première composante tSNE\")\n",
     "plt.ylabel(\"Deuxième composante tSNE\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94035121",
+   "metadata": {},
+   "source": [
+    "__Question :__ Comment les résultats de la visualisation t-SNE changent-ils lorsque vous modifiez la perplexité ? Dans le premier graphique, que vaut le paramètre perplexity ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e676ef50",
+   "metadata": {},
+   "source": [
+    "### UMAP\n",
+    "\n",
+    "Nous allons maintenant utiliser la même démarche, mais avec la bibliothéque [UMAP](https://umap-learn.readthedocs.io/en/latest/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1aabf893",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install umap-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c82f3365",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import umap.umap_ as umap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9b08136",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reducer = umap.UMAP()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c7d094b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time \n",
+    "X_umap = reducer.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95c9a72a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(X_umap[:, 0], X_umap[:, 1], \n",
+    "            c=y,cmap = 'gist_rainbow')\n",
+    "plt.xlabel(\"Première composante Umap\")\n",
+    "plt.ylabel(\"Deuxième composante Umap\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b4bc825",
+   "metadata": {},
+   "source": [
+    "__Question :__ Aller voir dans la documentation [UMAP](https://umap-learn.readthedocs.io/en/latest/), les différents paramètres de la méthode UMAP. Lesquels sont choisis par défaut ? Les modifier pour tester leur impact."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43c2cd52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "conplex-dti",
    "language": "python",
    "name": "python3"
   },
@@ -908,7 +1006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
