--- a/4-SVM/4-SVM.ipynb
+++ b/4-SVM/4-SVM.ipynb
@@ -2312,6 +2312,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# standardisation (centrer-réduire)\n",
+    "std_scaler = preprocessing.StandardScaler().fit(data)\n",
+    "data_scaled = std_scaler.transform(data)\n",
+    "\n",
+    "\n",
     "GramMatrix = metrics.pairwise.rbf_kernel(data_scaled, gamma=grid_svc.best_params_['gamma'])\n",
     "GramMatrix_scaled = center_and_normalise_kernel(GramMatrix)\n",
     "\n",
@@ -2509,11 +2514,19 @@
     "import seaborn as sns\n",
     "sns.pairplot(penguins_adelie_chinstrap, hue=\"species_int\",palette=\"bright\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48b0a26a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "conplex-dti",
    "language": "python",
    "name": "python3"
   },
@@ -2527,7 +2540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
